# fast_zero

./: .dockerignore  compose.yaml  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/versions/: 1690a507f255_create_users_table.py  375d87f9e015_create_todos_table.py  488418b37d03_adicionando_created_at_e_updated_at_na_.py  70be7684ca14_create_users_and_todos_table.py  9f2578ec31e7_adiconando_campo_updated_at_na_tabela_.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
